--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
     "@heroicons/react": "^1.0.6",
     "@tailwindcss/vite": "^4.1.7",
     "chart.js": "^4.4.9",
@@ -17,6 +18,7 @@
     "flowbite-react": "^0.11.7",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.0",
