--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "chart.js": "^4.4.9",
     "flowbite": "^3.1.2",
     "flowbite-react": "^0.11.7",
+    "lucide-react": "^0.511.0",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-countup": "^6.5.3",
