--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "chart.js": "^4.4.9",
     "flowbite": "^3.1.2",
     "flowbite-react": "^0.11.7",
+    "framer-motion": "^12.15.0",
     "lucide-react": "^0.511.0",
     "ract": "^0.0.1",
     "react": "^19.1.0",
