--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@gsap/react": "^2.1.2",
     "@heroicons/react": "^1.0.6",
     "@tailwindcss/vite": "^4.1.7",
+    "axios": "^1.9.0",
     "chart.js": "^4.4.9",
     "flowbite": "^3.1.2",
     "flowbite-react": "^0.11.7",
