--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@heroicons/react": "^1.0.6",
     "@tailwindcss/vite": "^4.1.7",
     "axios": "^1.9.0",
+    "axois": "^0.0.1-security",
     "chart.js": "^4.4.9",
     "flowbite": "^3.1.2",
     "flowbite-react": "^0.11.7",
