--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,8 @@
     "flowbite-react": "^0.11.7",
     "framer-motion": "^12.15.0",
     "lucide-react": "^0.511.0",
+    "ogl": "^1.0.11",
+    "postprocessing": "^6.37.4",
     "ract": "^0.0.1",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
@@ -32,7 +34,8 @@
     "react-router-dom": "^7.6.0",
     "slugify": "^1.6.6",
     "socket.io-client": "^4.8.1",
-    "tailwindcss": "^4.1.7"
+    "tailwindcss": "^4.1.7",
+    "three": "^0.177.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
